--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,9 @@ ignore =
     F405 # may be undefined, or defined from star imports
 max-line-length = 79
 
+[mypy]
+enable_incomplete_feature = NewGenericSyntax
+
 [tool:pytest]
 addopts =
     --pdbcls=IPython.terminal.debugger:TerminalPdb
