--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,8 @@ addopts =
     -p no:django
     -p no:profiling
     --capture=no
+asyncio_mode = auto
+asyncio_default_fixture_loop_scope = function
 log_level = INFO
 python_files = tests*.py *.py
 filterwarnings =
